--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ crash.*.log
 *.tfvars
 *.tfvars.json
 
+*.pem
+#to ignore all .pem files
+
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
